# whisperbox

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
profiles/: meeting_summary.yaml  meeting_to_blogpost.yaml  meeting_to_tweet.yaml  monologue_to_keynote.yaml  monologue_to_linkedin.yaml  monologue_to_prompt.yaml  personal_readme.yaml  pitch_perfecter.yaml  speaking_coach.yaml  storyteller.yaml  wisdow_distillation.yaml
scripts/: output_to_markdown.py
src/: ai-service.py  ai_service.py  app.py  audio.py  config.py  hotkeys.py  logger.py  process.py  recording_manager.py  setup.py  transcribe.py  ui.py
src/ai/: ai_service.py  process.py  process_transcript.py  transcribe.py
src/audio/: audio.py  recording_manager.py
src/core/: config.py  setup.py
src/ui/: app.py
src/utils/: hotkeys.py  logger.py  profile_executor.py  profile_parser.py  utils.py
src/whisperbox/: main.py
src/whisperbox/ai/: transcribe.py
src/whisperbox/audio/: audio.py
src/whisperbox/core/: config.py  setup.py
