[tool.poetry]
name = "hacker-transcriber"
version = "1.0.0"
description = "Transcribe meetings right in your terminal"
authors = ["Ty Fiero <tyfierodev@gmail.com>", "Mike Bird <tooluseai@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
pyaudio = "^0.2.13"
rich = "^13.3.0"
pyyaml = "^6.0"
pynput = "^1.7.6"
anthropic = "^0.43.0"
openai = "^1.59.7"
ollama = "^0.4.6"
groq = "^0.15.0"

[tool.poetry.scripts]
transcribe = "main:main"
setup = "src.setup:setup"
