[tool.poetry]
name = "whisperbox"
version = "1.0.0"
description = "WhisperBox - Record and transcribe audio with ease"
authors = ["Ty Fiero <tyfierodev@gmail.com>", "Mike Bird <tooluseai@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydub = "^0.25.1"
pyaudio = "^0.2.13"
rich = "^13.3.0"
pyyaml = "^6.0"
pynput = "^1.7.6"
anthropic = "^0.43.0"
openai = "^1.59.7"
ollama = "^0.4.6"
groq = "^0.15.0"
toga = "^0.4.8"
toga-cocoa = "^0.4.8"
inquirerpy = "^0.3.4"
requests = "^2.32.3"
pyperclip = "^1.9.0"
sounddevice = "^0.5.1"

[tool.poetry.scripts]
wb = "main:main"